chore: rename project to Polyclaw, update author to arkYu
- LICENSE: copyright → arkYu
- README: title → Polyclaw, clone URL → github.com/arkyu2077/polyclaw
- pyproject.toml: name → polyclaw, author → arkYu, URLs updated
- setup.py: name → polyclaw, entry point → polyclaw
- All "Polymarket News Edge" references replaced with "Polyclaw"
- All "Jasmine Zhang" references replaced with "arkYu"

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -1,4 +1,4 @@
-# Polymarket News Edge — Strategy Configuration
+# Polyclaw — Strategy Configuration
 # Copy this to config.yaml to override default strategy parameters.
 # Secrets (private key, API keys, webhooks) belong in .env — NOT here.
 
