--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # ============================================================
-# Polymarket News Edge — Environment Variables
+# Polyclaw — Environment Variables
 # Copy this file to .env and fill in your values.
 # ============================================================
 
