--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,13 +3,13 @@ requires = ["setuptools>=68.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "polymarket-news-edge"
+name = "polyclaw"
 version = "1.1.0"
-description = "AI-powered news information advantage scanner for Polymarket"
+description = "AI-powered news edge scanner and auto-trader for Polymarket"
 readme = "README.md"
 license = {text = "MIT"}
 requires-python = ">=3.10"
-authors = [{name = "Jasmine Zhang"}]
+authors = [{name = "arkYu"}]
 keywords = ["polymarket", "prediction-markets", "trading", "news", "edge-detection"]
 classifiers = [
     "Development Status :: 4 - Beta",
@@ -30,8 +30,8 @@ dependencies = [
 ]
 
 [project.scripts]
-polymarket-edge = "polymarket_news_edge.scanner:main"
+polyclaw = "polymarket_news_edge.scanner:main"
 
 [project.urls]
-Homepage = "https://github.com/USER/polymarket-news-edge"
-Repository = "https://github.com/USER/polymarket-news-edge"
+Homepage = "https://github.com/arkyu2077/polyclaw"
+Repository = "https://github.com/arkyu2077/polyclaw"
